--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.1.13",
+    "@tanstack/react-query": "^4.35.3",
     "@tanstack/react-query-devtools": "^4.35.3",
     "axios": "^1.5.1",
+    "cookies": "^0.8.0",
     "framer-motion": "^10.16.4",
+    "http-proxy": "^1.18.1",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "react-query": "^3.39.3",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
+    "@types/cookies": "^0.7.8",
+    "@types/http-proxy": "^1.17.12",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
@@ -27,6 +31,7 @@
     "autoprefixer": "latest",
     "eslint": "latest",
     "eslint-config-next": "latest",
+    "eslint-config-prettier": "^9.0.0",
     "husky": "^8.0.3",
     "postcss": "latest",
     "tailwindcss": "latest",
