--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "tailwind-scrollbar": "^3.0.5",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@types/react-dom": "latest",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "autoprefixer": "latest",
+    "daisyui": "^3.9.4",
     "eslint": "latest",
     "eslint-config-next": "latest",
     "eslint-config-prettier": "^9.0.0",
