--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/react": "^2.1.13",
+    "@chakra-ui/next-js": "^2.1.5",
+    "@chakra-ui/react": "^2.8.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.2",
     "@tanstack/react-query": "^4.35.3",
     "@tanstack/react-query-devtools": "^4.35.3",
     "axios": "^1.5.1",
-    "cookies": "^0.8.0",
     "framer-motion": "^10.16.4",
-    "http-proxy": "^1.18.1",
-    "next": "latest",
+    "next": "^13.5.6",
     "react": "latest",
     "react-dom": "latest",
+    "react-hook-form": "^7.48.2",
+    "tailwind-scrollbar": "^3.0.5",
+    "zod": "^3.22.4",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
@@ -29,6 +34,7 @@
     "@types/react-dom": "latest",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "autoprefixer": "latest",
+    "daisyui": "^3.9.4",
     "eslint": "latest",
     "eslint-config-next": "latest",
     "eslint-config-prettier": "^9.0.0",
