update interface model

--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "@tanstack/react-query-devtools": "^4.35.3",
     "axios": "^1.5.1",
     "framer-motion": "^10.16.4",
+    "i": "^0.3.7",
     "next": "^13.5.6",
+    "npm": "^10.2.4",
     "react": "latest",
     "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "latest",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
+    "react-tournament-bracket": "^0.2.4",
     "tailwind-scrollbar": "^3.0.5",
     "zod": "^3.22.4",
     "zustand": "^4.4.1"
