--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "axios": "^1.5.1",
     "framer-motion": "^10.16.4",
     "i": "^0.3.7",
+    "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "lodash.filter": "^4.6.0",
     "moment": "^2.29.4",
     "next": "^13.5.6",
+    "next-cookies": "^2.0.3",
     "npm": "^10.2.4",
     "react": "latest",
     "react-brackets": "^0.4.7",
@@ -33,6 +36,7 @@
     "react-dom": "latest",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
+    "react-toastify": "^9.1.3",
     "react-tournament-bracket": "^0.2.4",
     "swr": "^2.2.4",
     "tailwind-scrollbar": "^3.0.5",
@@ -42,6 +46,7 @@
   "devDependencies": {
     "@types/cookies": "^0.7.8",
     "@types/http-proxy": "^1.17.12",
+    "@types/js-cookie": "^3.0.6",
     "@types/lodash.filter": "^4.6.9",
     "@types/node": "latest",
     "@types/react": "latest",
