--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.2",
     "@mui/material": "^5.14.17",
+    "@orange_digital/chakra-datepicker": "^1.0.3",
     "@ramonak/react-progress-bar": "^5.1.1",
     "@tanstack/react-query": "^4.35.3",
     "@tanstack/react-query-devtools": "^4.35.3",
     "@tanstack/react-table": "^8.10.7",
     "axios": "^1.5.1",
+    "crypto": "^1.0.1",
     "framer-motion": "^10.16.4",
     "i": "^0.3.7",
     "lodash.filter": "^4.6.0",
@@ -32,10 +34,12 @@
     "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "latest",
     "react-hook-form": "^7.48.2",
+    "react-hook-form-chakra": "^1.0.2",
     "react-icons": "^4.12.0",
     "react-tournament-bracket": "^0.2.4",
     "swr": "^2.2.4",
     "tailwind-scrollbar": "^3.0.5",
+    "uuid": "^9.0.1",
     "zod": "^3.22.4",
     "zustand": "^4.4.1"
   },
@@ -46,6 +50,7 @@
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "autoprefixer": "latest",
     "daisyui": "^3.9.4",
