--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "swr": "^2.2.4",
     "tailwind-scrollbar": "^3.0.5",
     "uuid": "^9.0.1",
+    "xlsx": "^0.18.5",
     "zod": "^3.22.4",
     "zustand": "^4.4.1"
   },
