--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lodash.filter": "^4.6.0",
     "moment": "^2.29.4",
     "next": "^13.5.6",
+    "next-cloudinary": "^5.18.0",
     "next-cookies": "^2.0.3",
     "npm": "^10.2.4",
     "react": "latest",
