--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tanstack/react-query": "^4.35.3",
     "@tanstack/react-query-devtools": "^4.35.3",
     "@tanstack/react-table": "^8.10.7",
+    "@types/jwt-decode": "^3.1.0",
     "axios": "^1.5.1",
     "crypto": "^1.0.1",
     "framer-motion": "^10.16.4",
